--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-clap = { version = "4.5.37", features = ["derive"] }
-anyhow = "1.0.98"
+toml = "0.8"
+clap = { version = "4.5", features = ["derive"] }
+anyhow = "1"
+serde = { version = "1.0", features = ["derive"] }
 
